tests/baselines/reference/propertyNamesOfReservedWords(strict=true).errors.txt
propertyNamesOfReservedWords.ts(2,5): error TS7008: Member 'abstract' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(3,5): error TS7008: Member 'as' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(4,5): error TS7008: Member 'boolean' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(5,5): error TS7008: Member 'break' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(6,5): error TS7008: Member 'byte' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(7,5): error TS7008: Member 'case' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(8,5): error TS7008: Member 'catch' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(9,5): error TS7008: Member 'char' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(10,5): error TS7008: Member 'class' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(11,5): error TS7008: Member 'continue' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(12,5): error TS7008: Member 'const' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(13,5): error TS7008: Member 'debugger' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(14,5): error TS7008: Member 'default' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(15,5): error TS7008: Member 'delete' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(16,5): error TS7008: Member 'do' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(17,5): error TS7008: Member 'double' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(18,5): error TS7008: Member 'else' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(19,5): error TS7008: Member 'enum' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(20,5): error TS7008: Member 'export' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(21,5): error TS7008: Member 'extends' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(22,5): error TS7008: Member 'false' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(23,5): error TS7008: Member 'final' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(24,5): error TS7008: Member 'finally' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(25,5): error TS7008: Member 'float' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(26,5): error TS7008: Member 'for' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(27,5): error TS7008: Member 'function' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(28,5): error TS7008: Member 'goto' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(29,5): error TS7008: Member 'if' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(30,5): error TS7008: Member 'implements' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(31,5): error TS7008: Member 'import' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(32,5): error TS7008: Member 'in' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(33,5): error TS7008: Member 'instanceof' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(34,5): error TS7008: Member 'int' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(35,5): error TS7008: Member 'interface' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(36,5): error TS7008: Member 'is' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(37,5): error TS7008: Member 'long' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(38,5): error TS7008: Member 'namespace' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(39,5): error TS7008: Member 'native' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(40,5): error TS7008: Member 'new' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(41,5): error TS7008: Member 'null' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(42,5): error TS7008: Member 'package' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(43,5): error TS7008: Member 'private' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(44,5): error TS7008: Member 'protected' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(45,5): error TS7008: Member 'public' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(46,5): error TS7008: Member 'return' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(47,5): error TS7008: Member 'short' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(48,5): error TS7008: Member 'static' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(49,5): error TS7008: Member 'super' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(50,5): error TS7008: Member 'switch' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(51,5): error TS7008: Member 'synchronized' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(52,5): error TS7008: Member 'this' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(53,5): error TS7008: Member 'throw' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(54,5): error TS7008: Member 'throws' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(55,5): error TS7008: Member 'transient' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(56,5): error TS7008: Member 'true' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(57,5): error TS7008: Member 'try' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(58,5): error TS7008: Member 'typeof' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(59,5): error TS7008: Member 'use' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(60,5): error TS7008: Member 'var' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(61,5): error TS7008: Member 'void' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(62,5): error TS7008: Member 'volatile' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(63,5): error TS7008: Member 'while' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(64,5): error TS7008: Member 'with' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(67,10): error TS2454: Variable 'c' is used before being assigned.
propertyNamesOfReservedWords.ts(68,10): error TS2454: Variable 'c' is used before being assigned.
propertyNamesOfReservedWords.ts(71,5): error TS7008: Member 'abstract' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(72,5): error TS7008: Member 'as' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(73,5): error TS7008: Member 'boolean' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(74,5): error TS7008: Member 'break' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(75,5): error TS7008: Member 'byte' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(76,5): error TS7008: Member 'case' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(77,5): error TS7008: Member 'catch' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(78,5): error TS7008: Member 'char' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(79,5): error TS7008: Member 'class' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(80,5): error TS7008: Member 'continue' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(81,5): error TS7008: Member 'const' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(82,5): error TS7008: Member 'debugger' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(83,5): error TS7008: Member 'default' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(84,5): error TS7008: Member 'delete' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(85,5): error TS7008: Member 'do' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(86,5): error TS7008: Member 'double' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(87,5): error TS7008: Member 'else' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(88,5): error TS7008: Member 'enum' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(89,5): error TS7008: Member 'export' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(90,5): error TS7008: Member 'extends' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(91,5): error TS7008: Member 'false' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(92,5): error TS7008: Member 'final' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(93,5): error TS7008: Member 'finally' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(94,5): error TS7008: Member 'float' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(95,5): error TS7008: Member 'for' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(96,5): error TS7008: Member 'function' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(97,5): error TS7008: Member 'goto' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(98,5): error TS7008: Member 'if' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(99,5): error TS7008: Member 'implements' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(100,5): error TS7008: Member 'import' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(101,5): error TS7008: Member 'in' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(102,5): error TS7008: Member 'instanceof' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(103,5): error TS7008: Member 'int' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(104,5): error TS7008: Member 'interface' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(105,5): error TS7008: Member 'is' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(106,5): error TS7008: Member 'long' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(107,5): error TS7008: Member 'namespace' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(108,5): error TS7008: Member 'native' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(109,5): error TS7008: Member 'new' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(110,5): error TS7008: Member 'null' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(111,5): error TS7008: Member 'package' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(112,5): error TS7008: Member 'private' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(113,5): error TS7008: Member 'protected' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(114,5): error TS7008: Member 'public' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(115,5): error TS7008: Member 'return' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(116,5): error TS7008: Member 'short' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(117,5): error TS7008: Member 'static' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(118,5): error TS7008: Member 'super' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(119,5): error TS7008: Member 'switch' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(120,5): error TS7008: Member 'synchronized' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(121,5): error TS7008: Member 'this' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(122,5): error TS7008: Member 'throw' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(123,5): error TS7008: Member 'throws' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(124,5): error TS7008: Member 'transient' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(125,5): error TS7008: Member 'true' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(126,5): error TS7008: Member 'try' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(127,5): error TS7008: Member 'typeof' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(128,5): error TS7008: Member 'use' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(129,5): error TS7008: Member 'var' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(130,5): error TS7008: Member 'void' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(131,5): error TS7008: Member 'volatile' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(132,5): error TS7008: Member 'while' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(133,5): error TS7008: Member 'with' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(137,10): error TS2454: Variable 'i' is used before being assigned.
propertyNamesOfReservedWords.ts(138,10): error TS2454: Variable 'i' is used before being assigned.
propertyNamesOfReservedWords.ts(141,5): error TS7008: Member 'abstract' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(142,5): error TS7008: Member 'as' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(143,5): error TS7008: Member 'boolean' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(144,5): error TS7008: Member 'break' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(145,5): error TS7008: Member 'byte' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(146,5): error TS7008: Member 'case' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(147,5): error TS7008: Member 'catch' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(148,5): error TS7008: Member 'char' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(149,5): error TS7008: Member 'class' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(150,5): error TS7008: Member 'continue' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(151,5): error TS7008: Member 'const' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(152,5): error TS7008: Member 'debugger' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(153,5): error TS7008: Member 'default' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(154,5): error TS7008: Member 'delete' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(155,5): error TS7008: Member 'do' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(156,5): error TS7008: Member 'double' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(157,5): error TS7008: Member 'else' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(158,5): error TS7008: Member 'enum' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(159,5): error TS7008: Member 'export' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(160,5): error TS7008: Member 'extends' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(161,5): error TS7008: Member 'false' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(162,5): error TS7008: Member 'final' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(163,5): error TS7008: Member 'finally' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(164,5): error TS7008: Member 'float' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(165,5): error TS7008: Member 'for' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(166,5): error TS7008: Member 'function' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(167,5): error TS7008: Member 'goto' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(168,5): error TS7008: Member 'if' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(169,5): error TS7008: Member 'implements' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(170,5): error TS7008: Member 'import' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(171,5): error TS7008: Member 'in' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(172,5): error TS7008: Member 'instanceof' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(173,5): error TS7008: Member 'int' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(174,5): error TS7008: Member 'interface' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(175,5): error TS7008: Member 'is' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(176,5): error TS7008: Member 'long' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(177,5): error TS7008: Member 'namespace' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(178,5): error TS7008: Member 'native' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(179,5): error TS7008: Member 'new' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(180,5): error TS7008: Member 'null' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(181,5): error TS7008: Member 'package' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(182,5): error TS7008: Member 'private' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(183,5): error TS7008: Member 'protected' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(184,5): error TS7008: Member 'public' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(185,5): error TS7008: Member 'return' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(186,5): error TS7008: Member 'short' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(187,5): error TS7008: Member 'static' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(188,5): error TS7008: Member 'super' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(189,5): error TS7008: Member 'switch' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(190,5): error TS7008: Member 'synchronized' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(191,5): error TS7008: Member 'this' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(192,5): error TS7008: Member 'throw' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(193,5): error TS7008: Member 'throws' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(194,5): error TS7008: Member 'transient' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(195,5): error TS7008: Member 'true' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(196,5): error TS7008: Member 'try' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(197,5): error TS7008: Member 'typeof' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(198,5): error TS7008: Member 'use' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(199,5): error TS7008: Member 'var' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(200,5): error TS7008: Member 'void' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(201,5): error TS7008: Member 'volatile' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(202,5): error TS7008: Member 'while' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(203,5): error TS7008: Member 'with' implicitly has an 'any' type.
propertyNamesOfReservedWords.ts(206,10): error TS2454: Variable 'a' is used before being assigned.
propertyNamesOfReservedWords.ts(207,10): error TS2454: Variable 'a' is used before being assigned.


==== propertyNamesOfReservedWords.ts (195 errors) ====
    class C {
        abstract;
        ~~~~~~~~
!!! error TS7008: Member 'abstract' implicitly has an 'any' type.
        as;
        ~~
!!! error TS7008: Member 'as' implicitly has an 'any' type.
        boolean;
        ~~~~~~~
!!! error TS7008: Member 'boolean' implicitly has an 'any' type.
        break;
        ~~~~~
!!! error TS7008: Member 'break' implicitly has an 'any' type.
        byte;
        ~~~~
!!! error TS7008: Member 'byte' implicitly has an 'any' type.
        case;
        ~~~~
!!! error TS7008: Member 'case' implicitly has an 'any' type.
        catch;
        ~~~~~
!!! error TS7008: Member 'catch' implicitly has an 'any' type.
        char;
        ~~~~
!!! error TS7008: Member 'char' implicitly has an 'any' type.
        class;
        ~~~~~
!!! error TS7008: Member 'class' implicitly has an 'any' type.
        continue;
        ~~~~~~~~
!!! error TS7008: Member 'continue' implicitly has an 'any' type.
        const;
        ~~~~~
!!! error TS7008: Member 'const' implicitly has an 'any' type.
        debugger;
        ~~~~~~~~
!!! error TS7008: Member 'debugger' implicitly has an 'any' type.
        default;
        ~~~~~~~
!!! error TS7008: Member 'default' implicitly has an 'any' type.
        delete;
        ~~~~~~
!!! error TS7008: Member 'delete' implicitly has an 'any' type.
        do;
        ~~
!!! error TS7008: Member 'do' implicitly has an 'any' type.
        double;
        ~~~~~~
!!! error TS7008: Member 'double' implicitly has an 'any' type.
        else;
        ~~~~
!!! error TS7008: Member 'else' implicitly has an 'any' type.
        enum;
        ~~~~
!!! error TS7008: Member 'enum' implicitly has an 'any' type.
        export;
        ~~~~~~
!!! error TS7008: Member 'export' implicitly has an 'any' type.
        extends;
        ~~~~~~~
!!! error TS7008: Member 'extends' implicitly has an 'any' type.
        false;
        ~~~~~
!!! error TS7008: Member 'false' implicitly has an 'any' type.
        final;
        ~~~~~
!!! error TS7008: Member 'final' implicitly has an 'any' type.
        finally;
        ~~~~~~~
!!! error TS7008: Member 'finally' implicitly has an 'any' type.
        float;
        ~~~~~
!!! error TS7008: Member 'float' implicitly has an 'any' type.
        for;
        ~~~
!!! error TS7008: Member 'for' implicitly has an 'any' type.
        function;
        ~~~~~~~~
!!! error TS7008: Member 'function' implicitly has an 'any' type.
        goto;
        ~~~~
!!! error TS7008: Member 'goto' implicitly has an 'any' type.
        if;
        ~~
!!! error TS7008: Member 'if' implicitly has an 'any' type.
        implements;
        ~~~~~~~~~~
!!! error TS7008: Member 'implements' implicitly has an 'any' type.
        import;
        ~~~~~~
!!! error TS7008: Member 'import' implicitly has an 'any' type.
        in;
        ~~
!!! error TS7008: Member 'in' implicitly has an 'any' type.
        instanceof;
        ~~~~~~~~~~
!!! error TS7008: Member 'instanceof' implicitly has an 'any' type.
        int;
        ~~~
!!! error TS7008: Member 'int' implicitly has an 'any' type.
        interface;
        ~~~~~~~~~
!!! error TS7008: Member 'interface' implicitly has an 'any' type.
        is;
        ~~
!!! error TS7008: Member 'is' implicitly has an 'any' type.
        long;
        ~~~~
!!! error TS7008: Member 'long' implicitly has an 'any' type.
        namespace;
        ~~~~~~~~~
!!! error TS7008: Member 'namespace' implicitly has an 'any' type.
        native;
        ~~~~~~
!!! error TS7008: Member 'native' implicitly has an 'any' type.
        new;
        ~~~
!!! error TS7008: Member 'new' implicitly has an 'any' type.
        null;
        ~~~~
!!! error TS7008: Member 'null' implicitly has an 'any' type.
        package;
        ~~~~~~~
!!! error TS7008: Member 'package' implicitly has an 'any' type.
        private;
        ~~~~~~~
!!! error TS7008: Member 'private' implicitly has an 'any' type.
        protected;
        ~~~~~~~~~
!!! error TS7008: Member 'protected' implicitly has an 'any' type.
        public;
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
        return;
        ~~~~~~
!!! error TS7008: Member 'return' implicitly has an 'any' type.
        short;
        ~~~~~
!!! error TS7008: Member 'short' implicitly has an 'any' type.
        static;
        ~~~~~~
!!! error TS7008: Member 'static' implicitly has an 'any' type.
        super;
        ~~~~~
!!! error TS7008: Member 'super' implicitly has an 'any' type.
        switch;
        ~~~~~~
!!! error TS7008: Member 'switch' implicitly has an 'any' type.
        synchronized;
        ~~~~~~~~~~~~
!!! error TS7008: Member 'synchronized' implicitly has an 'any' type.
        this;
        ~~~~
!!! error TS7008: Member 'this' implicitly has an 'any' type.
        throw;
        ~~~~~
!!! error TS7008: Member 'throw' implicitly has an 'any' type.
        throws;
        ~~~~~~
!!! error TS7008: Member 'throws' implicitly has an 'any' type.
        transient;
        ~~~~~~~~~
!!! error TS7008: Member 'transient' implicitly has an 'any' type.
        true;
        ~~~~
!!! error TS7008: Member 'true' implicitly has an 'any' type.
        try;
        ~~~
!!! error TS7008: Member 'try' implicitly has an 'any' type.
        typeof;
        ~~~~~~
!!! error TS7008: Member 'typeof' implicitly has an 'any' type.
        use;
        ~~~
!!! error TS7008: Member 'use' implicitly has an 'any' type.
        var;
        ~~~
!!! error TS7008: Member 'var' implicitly has an 'any' type.
        void;
        ~~~~
!!! error TS7008: Member 'void' implicitly has an 'any' type.
        volatile;
        ~~~~~~~~
!!! error TS7008: Member 'volatile' implicitly has an 'any' type.
        while;
        ~~~~~
!!! error TS7008: Member 'while' implicitly has an 'any' type.
        with;
        ~~~~
!!! error TS7008: Member 'with' implicitly has an 'any' type.
    }
    var c: C;
    var r1 = c.abstract;
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r2 = c.as;
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        abstract;
        ~~~~~~~~
!!! error TS7008: Member 'abstract' implicitly has an 'any' type.
        as;
        ~~
!!! error TS7008: Member 'as' implicitly has an 'any' type.
        boolean;
        ~~~~~~~
!!! error TS7008: Member 'boolean' implicitly has an 'any' type.
        break;
        ~~~~~
!!! error TS7008: Member 'break' implicitly has an 'any' type.
        byte;
        ~~~~
!!! error TS7008: Member 'byte' implicitly has an 'any' type.
        case;
        ~~~~
!!! error TS7008: Member 'case' implicitly has an 'any' type.
        catch;
        ~~~~~
!!! error TS7008: Member 'catch' implicitly has an 'any' type.
        char;
        ~~~~
!!! error TS7008: Member 'char' implicitly has an 'any' type.
        class;
        ~~~~~
!!! error TS7008: Member 'class' implicitly has an 'any' type.
        continue;
        ~~~~~~~~
!!! error TS7008: Member 'continue' implicitly has an 'any' type.
        const;
        ~~~~~
!!! error TS7008: Member 'const' implicitly has an 'any' type.
        debugger;
        ~~~~~~~~
!!! error TS7008: Member 'debugger' implicitly has an 'any' type.
        default;
        ~~~~~~~
!!! error TS7008: Member 'default' implicitly has an 'any' type.
        delete;
        ~~~~~~
!!! error TS7008: Member 'delete' implicitly has an 'any' type.
        do;
        ~~
!!! error TS7008: Member 'do' implicitly has an 'any' type.
        double;
        ~~~~~~
!!! error TS7008: Member 'double' implicitly has an 'any' type.
        else;
        ~~~~
!!! error TS7008: Member 'else' implicitly has an 'any' type.
        enum;
        ~~~~
!!! error TS7008: Member 'enum' implicitly has an 'any' type.
        export;
        ~~~~~~
!!! error TS7008: Member 'export' implicitly has an 'any' type.
        extends;
        ~~~~~~~
!!! error TS7008: Member 'extends' implicitly has an 'any' type.
        false;
        ~~~~~
!!! error TS7008: Member 'false' implicitly has an 'any' type.
        final;
        ~~~~~
!!! error TS7008: Member 'final' implicitly has an 'any' type.
        finally;
        ~~~~~~~
!!! error TS7008: Member 'finally' implicitly has an 'any' type.
        float;
        ~~~~~
!!! error TS7008: Member 'float' implicitly has an 'any' type.
        for;
        ~~~
!!! error TS7008: Member 'for' implicitly has an 'any' type.
        function;
        ~~~~~~~~
!!! error TS7008: Member 'function' implicitly has an 'any' type.
        goto;
        ~~~~
!!! error TS7008: Member 'goto' implicitly has an 'any' type.
        if;
        ~~
!!! error TS7008: Member 'if' implicitly has an 'any' type.
        implements;
        ~~~~~~~~~~
!!! error TS7008: Member 'implements' implicitly has an 'any' type.
        import;
        ~~~~~~
!!! error TS7008: Member 'import' implicitly has an 'any' type.
        in;
        ~~
!!! error TS7008: Member 'in' implicitly has an 'any' type.
        instanceof;
        ~~~~~~~~~~
!!! error TS7008: Member 'instanceof' implicitly has an 'any' type.
        int;
        ~~~
!!! error TS7008: Member 'int' implicitly has an 'any' type.
        interface;
        ~~~~~~~~~
!!! error TS7008: Member 'interface' implicitly has an 'any' type.
        is;
        ~~
!!! error TS7008: Member 'is' implicitly has an 'any' type.
        long;
        ~~~~
!!! error TS7008: Member 'long' implicitly has an 'any' type.
        namespace;
        ~~~~~~~~~
!!! error TS7008: Member 'namespace' implicitly has an 'any' type.
        native;
        ~~~~~~
!!! error TS7008: Member 'native' implicitly has an 'any' type.
        new;
        ~~~
!!! error TS7008: Member 'new' implicitly has an 'any' type.
        null;
        ~~~~
!!! error TS7008: Member 'null' implicitly has an 'any' type.
        package;
        ~~~~~~~
!!! error TS7008: Member 'package' implicitly has an 'any' type.
        private;
        ~~~~~~~
!!! error TS7008: Member 'private' implicitly has an 'any' type.
        protected;
        ~~~~~~~~~
!!! error TS7008: Member 'protected' implicitly has an 'any' type.
        public;
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
        return;
        ~~~~~~
!!! error TS7008: Member 'return' implicitly has an 'any' type.
        short;
        ~~~~~
!!! error TS7008: Member 'short' implicitly has an 'any' type.
        static;
        ~~~~~~
!!! error TS7008: Member 'static' implicitly has an 'any' type.
        super;
        ~~~~~
!!! error TS7008: Member 'super' implicitly has an 'any' type.
        switch;
        ~~~~~~
!!! error TS7008: Member 'switch' implicitly has an 'any' type.
        synchronized;
        ~~~~~~~~~~~~
!!! error TS7008: Member 'synchronized' implicitly has an 'any' type.
        this;
        ~~~~
!!! error TS7008: Member 'this' implicitly has an 'any' type.
        throw;
        ~~~~~
!!! error TS7008: Member 'throw' implicitly has an 'any' type.
        throws;
        ~~~~~~
!!! error TS7008: Member 'throws' implicitly has an 'any' type.
        transient;
        ~~~~~~~~~
!!! error TS7008: Member 'transient' implicitly has an 'any' type.
        true;
        ~~~~
!!! error TS7008: Member 'true' implicitly has an 'any' type.
        try;
        ~~~
!!! error TS7008: Member 'try' implicitly has an 'any' type.
        typeof;
        ~~~~~~
!!! error TS7008: Member 'typeof' implicitly has an 'any' type.
        use;
        ~~~
!!! error TS7008: Member 'use' implicitly has an 'any' type.
        var;
        ~~~
!!! error TS7008: Member 'var' implicitly has an 'any' type.
        void;
        ~~~~
!!! error TS7008: Member 'void' implicitly has an 'any' type.
        volatile;
        ~~~~~~~~
!!! error TS7008: Member 'volatile' implicitly has an 'any' type.
        while;
        ~~~~~
!!! error TS7008: Member 'while' implicitly has an 'any' type.
        with;
        ~~~~
!!! error TS7008: Member 'with' implicitly has an 'any' type.
    }
    
    var i: I;
    var r3 = i.abstract;
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r4 = i.as;
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        abstract;
        ~~~~~~~~
!!! error TS7008: Member 'abstract' implicitly has an 'any' type.
        as;
        ~~
!!! error TS7008: Member 'as' implicitly has an 'any' type.
        boolean;
        ~~~~~~~
!!! error TS7008: Member 'boolean' implicitly has an 'any' type.
        break;
        ~~~~~
!!! error TS7008: Member 'break' implicitly has an 'any' type.
        byte;
        ~~~~
!!! error TS7008: Member 'byte' implicitly has an 'any' type.
        case;
        ~~~~
!!! error TS7008: Member 'case' implicitly has an 'any' type.
        catch;
        ~~~~~
!!! error TS7008: Member 'catch' implicitly has an 'any' type.
        char;
        ~~~~
!!! error TS7008: Member 'char' implicitly has an 'any' type.
        class;
        ~~~~~
!!! error TS7008: Member 'class' implicitly has an 'any' type.
        continue;
        ~~~~~~~~
!!! error TS7008: Member 'continue' implicitly has an 'any' type.
        const;
        ~~~~~
!!! error TS7008: Member 'const' implicitly has an 'any' type.
        debugger;
        ~~~~~~~~
!!! error TS7008: Member 'debugger' implicitly has an 'any' type.
        default;
        ~~~~~~~
!!! error TS7008: Member 'default' implicitly has an 'any' type.
        delete;
        ~~~~~~
!!! error TS7008: Member 'delete' implicitly has an 'any' type.
        do;
        ~~
!!! error TS7008: Member 'do' implicitly has an 'any' type.
        double;
        ~~~~~~
!!! error TS7008: Member 'double' implicitly has an 'any' type.
        else;
        ~~~~
!!! error TS7008: Member 'else' implicitly has an 'any' type.
        enum;
        ~~~~
!!! error TS7008: Member 'enum' implicitly has an 'any' type.
        export;
        ~~~~~~
!!! error TS7008: Member 'export' implicitly has an 'any' type.
        extends;
        ~~~~~~~
!!! error TS7008: Member 'extends' implicitly has an 'any' type.
        false;
        ~~~~~
!!! error TS7008: Member 'false' implicitly has an 'any' type.
        final;
        ~~~~~
!!! error TS7008: Member 'final' implicitly has an 'any' type.
        finally;
        ~~~~~~~
!!! error TS7008: Member 'finally' implicitly has an 'any' type.
        float;
        ~~~~~
!!! error TS7008: Member 'float' implicitly has an 'any' type.
        for;
        ~~~
!!! error TS7008: Member 'for' implicitly has an 'any' type.
        function;
        ~~~~~~~~
!!! error TS7008: Member 'function' implicitly has an 'any' type.
        goto;
        ~~~~
!!! error TS7008: Member 'goto' implicitly has an 'any' type.
        if;
        ~~
!!! error TS7008: Member 'if' implicitly has an 'any' type.
        implements;
        ~~~~~~~~~~
!!! error TS7008: Member 'implements' implicitly has an 'any' type.
        import;
        ~~~~~~
!!! error TS7008: Member 'import' implicitly has an 'any' type.
        in;
        ~~
!!! error TS7008: Member 'in' implicitly has an 'any' type.
        instanceof;
        ~~~~~~~~~~
!!! error TS7008: Member 'instanceof' implicitly has an 'any' type.
        int;
        ~~~
!!! error TS7008: Member 'int' implicitly has an 'any' type.
        interface;
        ~~~~~~~~~
!!! error TS7008: Member 'interface' implicitly has an 'any' type.
        is;
        ~~
!!! error TS7008: Member 'is' implicitly has an 'any' type.
        long;
        ~~~~
!!! error TS7008: Member 'long' implicitly has an 'any' type.
        namespace;
        ~~~~~~~~~
!!! error TS7008: Member 'namespace' implicitly has an 'any' type.
        native;
        ~~~~~~
!!! error TS7008: Member 'native' implicitly has an 'any' type.
        new;
        ~~~
!!! error TS7008: Member 'new' implicitly has an 'any' type.
        null;
        ~~~~
!!! error TS7008: Member 'null' implicitly has an 'any' type.
        package;
        ~~~~~~~
!!! error TS7008: Member 'package' implicitly has an 'any' type.
        private;
        ~~~~~~~
!!! error TS7008: Member 'private' implicitly has an 'any' type.
        protected;
        ~~~~~~~~~
!!! error TS7008: Member 'protected' implicitly has an 'any' type.
        public;
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
        return;
        ~~~~~~
!!! error TS7008: Member 'return' implicitly has an 'any' type.
        short;
        ~~~~~
!!! error TS7008: Member 'short' implicitly has an 'any' type.
        static;
        ~~~~~~
!!! error TS7008: Member 'static' implicitly has an 'any' type.
        super;
        ~~~~~
!!! error TS7008: Member 'super' implicitly has an 'any' type.
        switch;
        ~~~~~~
!!! error TS7008: Member 'switch' implicitly has an 'any' type.
        synchronized;
        ~~~~~~~~~~~~
!!! error TS7008: Member 'synchronized' implicitly has an 'any' type.
        this;
        ~~~~
!!! error TS7008: Member 'this' implicitly has an 'any' type.
        throw;
        ~~~~~
!!! error TS7008: Member 'throw' implicitly has an 'any' type.
        throws;
        ~~~~~~
!!! error TS7008: Member 'throws' implicitly has an 'any' type.
        transient;
        ~~~~~~~~~
!!! error TS7008: Member 'transient' implicitly has an 'any' type.
        true;
        ~~~~
!!! error TS7008: Member 'true' implicitly has an 'any' type.
        try;
        ~~~
!!! error TS7008: Member 'try' implicitly has an 'any' type.
        typeof;
        ~~~~~~
!!! error TS7008: Member 'typeof' implicitly has an 'any' type.
        use;
        ~~~
!!! error TS7008: Member 'use' implicitly has an 'any' type.
        var;
        ~~~
!!! error TS7008: Member 'var' implicitly has an 'any' type.
        void;
        ~~~~
!!! error TS7008: Member 'void' implicitly has an 'any' type.
        volatile;
        ~~~~~~~~
!!! error TS7008: Member 'volatile' implicitly has an 'any' type.
        while;
        ~~~~~
!!! error TS7008: Member 'while' implicitly has an 'any' type.
        with;
        ~~~~
!!! error TS7008: Member 'with' implicitly has an 'any' type.
    }
    
    var r5 = a.abstract;
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r6 = a.as;
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    enum E {
        abstract,
        as,
        boolean,
        break,
        byte,
        case,
        catch,
        char,
        class,
        continue,
        const,
        debugger,
        default,
        delete,
        do,
        double,
        else,
        enum,
        export,
        extends,
        false,
        final,
        finally,
        float,
        for,
        function,
        goto,
        if,
        implements,
        import,
        in,
        instanceof,
        int,
        interface,
        is,
        long,
        namespace,
        native,
        new,
        null,
        package,
        private,
        protected,
        public,
        return,
        short,
        static,
        super,
        switch,
        synchronized,
        this,
        throw,
        throws,
        transient,
        true,
        try,
        typeof,
        use,
        var,
        void,
        volatile,
        while,
        with,
    }
    
    var r7 = E.abstract;
    var r8 = E.as;